Closed Bug 1590782 Opened 6 years ago Closed 6 years ago

Fix nsDocShell::PerformRetargeting for fission.

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla72
Fission Milestone M5
Tracking Status
firefox72 --- fixed

People

(Reporter: farre, Assigned: farre)

References

Details

Attachments

(1 file)

nsDocShell::PerformRetargeting can't find out of process nsDocShells

Blocks: 1590762
Depends on: 1575051
Assignee: nobody → afarre
Priority: -- → P2
Blocks: 1592309
Attachment #9104929 - Attachment description: Bug 1590782 - Switch process when InternalLoad finds oop BrowsingContext. r=nika → Bug 1590782 - Switch process when InternalLoad finds oop BrowsingContext. r=mattwoodrow
Pushed by maglione.k@gmail.com: https://hg.mozilla.org/integration/autoland/rev/09005ea3861f Switch process when InternalLoad finds oop BrowsingContext. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla72

Retroactively moving fixed bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to an appropriate Fission Milestone.

This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:

0ee3c76a-bc79-4eb2-8d12-05dc0b68e732

Fission Milestone: --- → M5
Regressions: 1611414
See Also: → 1648369
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: