dom/ipc/WindowGlobalChild.h
@@ -117,6 +117,9 @@ class WindowGlobalChild final : public WindowGlobalActor,
   mozilla::ipc::IPCResult RecvLoadURIInChild(nsDocShellLoadState* aLoadState,
                                              bool aSetNavigating);
 
+  mozilla::ipc::IPCResult RecvInternalLoadInChild(
+      nsDocShellLoadState* aLoadState, bool aTakeFocus);
+
   mozilla::ipc::IPCResult RecvDisplayLoadError(const nsAString& aURI);
 
   mozilla::ipc::IPCResult RecvMakeFrameLocal(
